# howto-test-c-code-with-python

./: .gitignore  CMakeLists.txt  LICENSE.rst  build.ps1  install-mandatory.list  test.bat
src/main/: pt1.c
